--- a/js-assignment2/code/index.html
+++ b/js-assignment2/code/index.html
@@ -28,33 +28,17 @@
             <nav>
                 <div class="wrapper">
                     <div class="logo"></div>
-                    <ul id="dropdown" class="dropdown">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Products</a></li>
-                        <li><a href="#">Contact</a></li>
-                        <div class="close"></div>
-                    </ul>
-                    <div class="menu"></div>
+                        <ul id="menu">
+                        <div id="close" class="close"></div>
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#">About</a></li>
+                            <li><a href="#">Products</a></li>
+                            <li><a href="#">Contact</a></li>
+                        </ul>
+                    <div id="menu-button" class="menu"></div>
                 </div>
             </nav>
         </header>
-
-
-        <!-- <header>
-            <nav>
-                <div class="wrapper">
-                    <div class="logo"></div>
-                    <ul id="dropdown" class="dropdown">
-                        <div class="close"></div>
-                    </ul>
-                    <div class="menu"></div>
-                    
-                </div>
-            </nav>
-        </header> -->
-
-
         <div class="hero">
             <div class="wrapper">
                 <h1>Product Name</h1>
